--- a/Actividad_equipo.ipynb
+++ b/Actividad_equipo.ipynb
@@ -23,14 +23,12 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "* NOMBRE: Luis Salomon Flores Ugalde\n",
+    "*   NOMBRE: Luis Salomon Flores Ugalde\n",
     "*   MATRÍCULA: A00817435\n",
-    "--\n",
-    "*   NOMBRE: \n",
-    "*   MATRÍCULA: \n",
-    "--\n",
-    "*   NOMBRE: \n",
-    "*   MATRÍCULA: "
+    "*   NOMBRE: Alejandro Guzmán Chávez\n",
+    "*   MATRÍCULA: A01795398\n",
+    "*   NOMBRE: Oscar Israel Lerma Franco\n",
+    "*   MATRÍCULA: A01380817"
    ],
    "metadata": {
     "id": "HfLoXtuKuCug"
