kmeans implementatation with incorrect metrics

--- a/Proyecto_Avance_4_24.ipynb
+++ b/Proyecto_Avance_4_24.ipynb
@@ -2681,7 +2681,7 @@
     "    mrr_scores = []\n",
     "    time_metrics = []\n",
     "\n",
-    "    # Iterate over each title in the DataFrame\n",
+    "    # Itera sobre el\n",
     "    for title in df['app_name'].values:\n",
     "        start_time = time.time()\n",
     "        recommendations = recommend_games_kmeans(title, df, k)\n",
@@ -2723,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 472,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-08T20:42:42.106256Z",
